k8s/3_db.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: harrytang-xyz
  labels:
    app: mariadb
spec:
  ports:
    - protocol: TCP
      name: mysql
      port: 3306
      targetPort: 3306
  clusterIP: None
  selector:
    app: mariadb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: harrytang-xyz
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  serviceName: "mariadb"
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
        runAsNonRoot: true
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: mariadb
          image: mariadb:10.9
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
              protocol: TCP
              name: mariadb
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: "longhorn"
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
